--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://github.com/yn4k4nishi/snp-viewer",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
