--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "plotly.js": "^2.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,12 +15,13 @@
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/yn4k4nishi/snp-viewer",
+  "homepage": "https://yn4k4nishi.github.io/snp-viewer",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
