--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,4 +16,6 @@ jobs:
           node-version: 14.x
       - run: npm install
       - run: npm run build
+        env:
+          CI: false
       - run: npm run deploy
